<resources>
    <string name="app_name">Butlers</string>
    <string name="facebook_app_id">3590683527632397</string>
    <string name="fb_login_protocol_scheme">fb3590683527632397</string>
    <string name="get_Started">Get started</string>
    <string name="fb_Login">Continue with \n facebook</string>
    <string name="sign_in">SIGN UP</string>
    <string name="login">LOGIN</string>
    <string name="verify_email_phone">Verify Email And Mobile</string>
    <string name="change_password">Change PASSWORD</string>
    <string name="submit">Submit</string>
    <string name="preorders_now">PREOREDER NOW</string>
    <string name="preorders_now_desc">Preorder your favourite  Butlers Chocolate Cafe treats with ease</string>
    <string name="my_butlers_card">my butlers card</string>
    <string name="my_butlers_card_desc">Top up you Butlers card and get every 10th hot drink free</string>
    <string name="default_notification_channel_id">123456</string>

    <string name="name">NAME :</string>
    <string name="email">EMAIL :</string>
    <string name="mobile_No">MOBILE :</string>
    <string name="password">PASSWORD :</string>
    <string name="current_password">CURRENT PASSWORD :</string>
    <string name="confirm_pass">CONFIRM PASSWORD :</string>
    <string name="new_pass">NEW PASSWORD :</string>
    <string name="remember_me">Remember Me </string>
    <string name="forget_pass">Forgot password? </string>
    <string name="forget_password">forgot password </string>
    <string name="i_Agree">I agree to</string>
    <string name="terms">I agree to <![CDATA[Terms & Conditions and Privacy Policy]]></string>
    <string name="account_balance"> PLATINUM LOYALTY CARD BALANCE: €00.00 </string>>
    <string name="store_different_alert">You have a product in your cart from another store. Adding this product will remove your previous order from your cart. Are you sure you wish to continue with a different store?</string>
    <string name="complememtiary_alert">Would you like to choose your complimentary </string>
    <string name="complememtiary_without_alert">Would you like to add</string>

    <string name="my_orders">MY Orders</string>
    <string name="settings">Settings</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_Conditions">Terms &amp; Conditions</string>
    <string name="support">Support</string>
    <string name="contact_us">Contact us</string>
    <string name="FAQs">FAQs</string>
    <string name="feedback">Feedback</string>
    <string name="cards">cards</string>
    <string name="profile">Profile</string>
    <string name="save">Save</string>
    <string name="logout">log out</string>
    <string name="myAddress">My Address</string>
    <string name="verify_otp">VERIFY ONE TIME PASSWORD</string>
    <string name="verify">verify</string>
    <string name="my_buttler_card">Platinum Loyalty \n Card</string>
    <string name="customise_your_coffe">customise \n your coffe</string>
    <string name="my_code">My \n Code</string>
    <string name="scan_code">Scan Code</string>
    <string name="select_card">Add/Select Payment Card (Not loyalty card)</string>
    <string name="order_id">Order Id</string>
    <string name="support_id">Support Id</string>
    <string name="support_type">Support Type</string>
    <string name="invoice_no">Invoice No</string>
    <string name="pickup_code">Pickup Code</string>
    <string name="order_status">Order Status</string>
    <string name="order_time">Order Time</string>
    <string name="support_time">Support Time</string>
    <string name="amount">Amount</string>
    <string name="pickup_time">Pickup Time</string>
    <string name="payment_method">Payment Method</string>
    <string name="add_ticket">add ticket</string>
    <string name="saved_card">Saved Cards</string>
    <string name="new_Card">New Card</string>
    <string name="butler_Card">Butlers \n Card</string>
    <string name="card_payment"> CARD \n PAYMENT </string>

    <string name="error_time_out">Socket Timeout Exception.Try Again</string>
    <string name="error_message">Something went wrong on Server</string>
    <string name="no_record_found">"NO Record Found"</string>
    <string name="loading">Loading...</string>
    <string name="no_internetconnection">No Internet Connection Available.Please check your connection.</string>
    <string name="select_time_day">Please Select Time and Day</string>
    <string name="orderPickUpAddress">YOUR ORDER IS READY FOR PICK UP FROM %1$s </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="fragment_contact_u_s">fragment_contact_u_s</string>
    <string name="fragment_feedback">fragment_support</string>
    <string name="faqFragment">faqFragment</string>
    <string name="fragment_settings">fragment_settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="new_card">New Card</string>
    <string name="pay_now">  Pay Now  </string>
    <string name="butlers_card">PLATINUM \n LOYALTY CARD</string>
    <string name="empty_String"> </string>
    <string name="no_order_message">No orders yet</string>
    <string name="no_ticket_message">No tickets added yet</string>
    <string name="general_support">General Support </string>
    <string name="support_message">Facing any problem with our services?\nClick here to open a live chat window\nto speak to one of our advisors. </string>
    <string name="addToBag">Add to bag</string>
    <string name="loyaltyCard">I agree to LOYALTY CARD</string>
    <string name="enter_loyalty_number"><u>Enter your loyalty card number</u></string>
    <string name="use_qr_scanner"><u>Use qr code scanner</u></string>
    <string name="one_Time_password">ONE TIME PASSWORD \n sent to your email address</string>

</resources>
