<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <import type="android.view.View" />
        <variable
            name="viewModel"
            type="com.butlerschocolates.app.viewmodels.login.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPantoneBlack"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_login"
                android:gravity="top"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:layout_gravity="center"
                    android:fontFamily="@font/latinotypebold"
                    android:textAllCaps="true"
                    android:textColor="@color/ColorWhite"
                    android:textSize="@dimen/txtSizeLarge"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape">

                    <EditText
                        android:singleLine="true"
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center|left"
                        android:hint="@string/email"
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:textColorHint="@color/txtPantoneBlack"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorPantoneBlack"
                        android:textSize="@dimen/txtSizeLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape">

                    <EditText
                        android:singleLine="true"
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center|left"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:textColorHint="@color/txtPantoneBlack"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorPantoneBlack"
                        android:textSize="@dimen/txtSizeLarge" />
                </LinearLayout>

                <CheckBox
                    android:id="@+id/chkBox_RememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:buttonTint="@color/ColorWhite"
                    android:checked="true"
                    android:fontFamily="@font/latinotypebold"
                    android:gravity="left|center"
                    android:text="@string/remember_me"
                    android:textColor="@color/ColorWhite"
                    android:textSize="@dimen/txtSizeSmall" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="bottom"
                        android:layout_marginHorizontal="@dimen/_35sdp"
                        android:orientation="vertical">


                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:gravity="center"
                            android:layout_gravity="center"
                            android:orientation="vertical"
                            android:layout_height="wrap_content">

                            <TextView
                                android:id="@+id/tv_forgotPassword"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/forget_pass"
                                android:layout_gravity="center"
                                android:textAllCaps="true"
                                android:fontFamily="@font/latinotype_arquitecta_book"
                                android:textColor="@color/txtWhite"
                                android:textSize="@dimen/txtSizeLarge" />

                            <View
                                android:background="@color/ColorWhite"
                                android:layout_width="match_parent"
                                android:layout_height="2dp"/>
                        </LinearLayout>

                        <Button
                            android:id="@+id/bt_submit"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_difference_between_view"
                            android:background="@drawable/round_rectangular_white_shape"
                            android:text="@string/submit"
                            android:fontFamily="@font/latinotype_arquitecta_book"
                            android:textColor="@color/colorPantoneBlack"
                            android:textSize="@dimen/txtSizeMedium" />

                        <Button
                            android:id="@+id/bt_facebook"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/margin_difference_between_view"
                            android:background="@drawable/round_rectangular_white_shape"
                            android:padding="@dimen/_5sdp"
                            android:text="@string/fb_Login"
                            android:fontFamily="@font/latinotype_arquitecta_book"
                            android:textColor="@color/colorPantoneBlack"
                            android:textSize="@dimen/txtSizeMedium" />
                    </LinearLayout>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <androidx.core.widget.ContentLoadingProgressBar
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:visibility="@{viewModel.isLoading ? View.VISIBLE : View.GONE}" />
    </RelativeLayout>
</layout>
