<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorPantoneBlack"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/_40sdp"
        android:layout_gravity="center"
        android:src="@drawable/ic_logo"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_signup"
                android:gravity="center|top"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_in"
                    android:fontFamily="@font/latinotypebold"
                    android:textColor="@color/ColorWhite"
                    android:textSize="@dimen/txtSizeMedium" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape">

                    <EditText
                        android:inputType="textPersonName"
                        android:id="@+id/ed_name"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center|left"
                        android:hint="@string/name"
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:textColorHint="@color/txtPantoneBlack"
                        android:paddingLeft="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorPantoneBlack"
                        android:textSize="@dimen/txtSizeLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape">

                    <EditText
                        android:textColorHint="@color/txtPantoneBlack"
                        android:singleLine="true"
                        android:inputType="textEmailAddress"
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center|left"
                        android:hint="@string/email"
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorPantoneBlack"
                        android:textSize="@dimen/txtSizeLarge" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape">

                    <TextView
                        android:id="@+id/countryCodeText"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:hint="+00"
                        android:visibility="gone"
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:textColor="@color/txtPantoneBlack"
                        android:textColorHint="@color/colorPantoneBlack"
                        android:paddingLeft="@dimen/_5sdp"
                        />

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/countryCode_Picker"
                        android:layout_width="@dimen/_45sdp"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:visibility="visible"
                        android:paddingLeft="@dimen/_5sdp"
                        app:ccp_contentColor="@color/colorPantoneBlack"
                        app:ccp_countryPreference="IE,GB,AL,AD,AT,BY,BE,BA,BG,HR,CY,CZ,DK,EE,FO,FI,FR,DE,GI,GR,HU,IS,IM,IT,RS,LV,LI,LT,LU,MK,MT,MD,MC,ME,NL,NO,PL,PT,RO,RU,SM,RS,SK,SI,ES,SE,CH,UA,VA,RS"
                        app:ccp_defaultNameCode="IE"
                        app:ccp_showFlag="false"
                        app:ccp_showNameCode="false"
                        app:ccp_textSize="@dimen/txtSizeSmall"/>

                    <EditText
                        android:inputType="number"
                        android:id="@+id/ed_moblie"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center|left"
                        android:hint="@string/mobile_No"
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:textColorHint="@color/txtPantoneBlack"
                        android:singleLine="true"
                        android:textColor="@color/colorPantoneBlack"
                        android:textSize="@dimen/txtSizeLarge" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape">

                    <EditText
                        android:id="@+id/ed_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center|left"
                        android:hint="@string/password"
                        android:textColorHint="@color/txtPantoneBlack"
                        android:paddingLeft="@dimen/_10sdp"
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:singleLine="true"
                        android:inputType="textPassword"
                        android:textColor="@color/colorPantoneBlack"
                        android:textSize="@dimen/txtSizeLarge" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape">

                    <EditText
                        android:inputType="textPassword"
                        android:id="@+id/ed_confirmPass"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center|left"
                        android:textColorHint="@color/txtPantoneBlack"
                        android:hint="@string/confirm_pass"
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:paddingLeft="@dimen/_10sdp"
                        android:singleLine="true"
                        android:textColor="@color/colorPantoneBlack"
                        android:textSize="@dimen/txtSizeLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="left|center"
                        android:layout_marginTop="@dimen/margin_difference_between_view"
                        android:orientation="horizontal">

                        <CheckBox
                            android:id="@+id/chkbox_Terms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_5sdp"
                            android:buttonTint="@color/ColorWhite"
                            android:textSize="@dimen/txtSizeSmall" />

                        <TextView
                            android:id="@+id/txt_Terms"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="left|center"
                            android:layout_weight="1"
                            android:fontFamily="@font/latinotypebold"
                            android:text="@string/terms"
                            android:textColor="@color/ColorWhite"
                            android:textColorLink="@color/ColorPantoneLight"
                            android:textSize="@dimen/txtSizeSmall" />
                    </LinearLayout>
                    <CheckBox
                        android:id="@+id/chkBox_RememberMe"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginTop="@dimen/margin_difference_between_view"
                        android:buttonTint="@color/ColorWhite"
                        android:checked="true"
                        android:gravity="left|center"
                        android:fontFamily="@font/latinotypebold"
                        android:text="@string/remember_me"
                        android:textColor="@color/ColorWhite"
                        android:textSize="@dimen/txtSizeSmall" />
                </LinearLayout>

                <Button
                    android:id="@+id/bt_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape"
                    android:text="@string/submit"
                    android:layout_marginHorizontal="@dimen/_45sdp"
                    android:fontFamily="@font/latinotype_arquitecta_book"
                    android:textColor="@color/colorPantoneBlack"
                    android:textSize="@dimen/txtSizeMedium" />
                <Button
                    android:id="@+id/bt_facebook"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape"
                    android:padding="@dimen/_5sdp"
                    android:layout_marginHorizontal="@dimen/_45sdp"
                    android:text="@string/fb_Login"
                    android:fontFamily="@font/latinotype_arquitecta_book"
                    android:textColor="@color/colorPantoneBlack"
                    android:textSize="@dimen/txtSizeMedium" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>