<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPantoneBlack"
            android:orientation="vertical">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_40sdp"
                android:layout_gravity="center"
                android:src="@drawable/ic_logo" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_login"
                android:gravity="center|top"
                android:orientation="vertical"
                android:padding="@dimen/_20sdp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/verify_email_phone"
                    android:fontFamily="@font/latinotypebold"
                    android:textAllCaps="true"
                    android:textColor="@color/ColorWhite"
                    android:textSize="@dimen/txtSizeLarge"
                    android:textStyle="bold" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:background="@drawable/round_rectangular_white_shape">
                    <EditText
                        android:singleLine="true"
                        android:id="@+id/ed_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center|left"
                        android:hint="@string/email"
                        android:enabled="false"
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:textColorHint="@color/txtPantoneBlack"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorPantoneBlack"
                        android:textSize="@dimen/txtSizeLarge" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/margin_difference_between_view"
                    android:layout_gravity="center"
                    android:background="@drawable/round_rectangular_white_shape">
                    <com.hbb20.CountryCodePicker
                        android:id="@+id/countryCode_Picker"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        app:ccp_contentColor="@color/colorPantoneBlack"
                        app:ccp_countryPreference="IE,GB,AL,AD,AT,BY,BE,BA,BG,HR,CY,CZ,DK,EE,FO,FI,FR,DE,GI,GR,HU,IS,IM,IT,RS,LV,LI,LT,LU,MK,MT,MD,MC,ME,NL,NO,PL,PT,RO,RU,SM,RS,SK,SI,ES,SE,CH,UA,VA,RS"
                        app:ccp_defaultNameCode="IE"
                        app:ccp_showFlag="false"
                        app:ccp_showNameCode="false"
                        app:ccp_textSize="@dimen/txtSizeSmall"/>
                    <EditText
                        android:fontFamily="@font/latinotype_arquitecta_book"
                        android:singleLine="true"
                        android:id="@+id/ed_phone"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@null"
                        android:gravity="center|left"
                        android:inputType="phone"
                        android:hint="@string/mobile_No"
                        android:textColorHint="@color/txtPantoneBlack"
                        android:paddingLeft="@dimen/_10sdp"
                        android:textColor="@color/colorPantoneBlack"
                        android:textSize="@dimen/txtSizeLarge" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/_20sdp"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/_45sdp">
            <Button
                android:id="@+id/bt_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_difference_between_view"
                android:background="@drawable/round_rectangular_white_shape"
                android:text="@string/submit"
                android:fontFamily="@font/latinotype_arquitecta_book"
                android:textColor="@color/colorPantoneBlack"
                android:textSize="@dimen/txtSizeMedium" />
        </LinearLayout>
    </RelativeLayout>
</layout>
